[gd_scene load_steps=6 format=2]

[ext_resource path="res://projectiles/Projectile.gd" type="Script" id=1]
[ext_resource path="res://assets/player/staffprojectileline.png" type="Texture" id=2]
[ext_resource path="res://assets/sphere_soft.png" type="Texture" id=3]

[sub_resource type="CapsuleShape2D" id=1]
resource_local_to_scene = true
radius = 28.0
height = 120.0

[sub_resource type="Gradient" id=2]
resource_local_to_scene = true
offsets = PoolRealArray( 0, 0.423841, 0.788079, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0 )

[node name="Projectile" type="Area2D"]
collision_layer = 4
collision_mask = 13
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
modulate = Color( 0.454902, 0, 1, 1 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2( 60, 0 )
amount = 500
lifetime = 1.5
preprocess = 1.0
speed_scale = 5.0
texture = ExtResource( 3 )
emission_shape = 1
emission_sphere_radius = 25.0
spread = 180.0
gravity = Vector2( -200, 0 )
scale_amount = 0.01
color_ramp = SubResource( 2 )

[node name="DissolveTimer" type="Timer" parent="."]
process_mode = 0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_Projectile_body_entered"]
[connection signal="timeout" from="DissolveTimer" to="." method="_on_DissolveTimer_timeout"]
